--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 		<section class = "conteudo-principal"></section>
 		<h2 class = "titulo-principal"> Título <span>_</span> <h2>
 		<div class= "botoes">
-			<button class = "botao ativo"> Botão 1 </button>
-			<button class = "botao"> Botão 2  </button>
-			<button class = "botao"> Botão 3  </button>
-			<button class = "botao"> Botão 4  </button>
+			<button class = "botao ativo"> Estudar </button>
+			<button class = "botao"> Volêi </button>
+			<button class = "botao"> exercito </button>
+			<button class = "botao"> Ficar vivo </button>
 		</div>
 
 		<div class="abas-textos">
