--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<div class="conteudo">
 		<section class = "conteudo-principal"></section>
-		<h2 class = "titulo-principal"> Título <span>_</span> <h2>
+		<h2 class = "titulo-principal"> Meus objetivos <span>_</span> <h2>
 		<div class= "botoes">
 			<button class = "botao ativo"> Estudar </button>
 			<button class = "botao"> Volêi </button>
@@ -21,22 +21,22 @@
 
 		<div class="abas-textos">
 			<div class="aba-conteudo ativo">
-			<h3 class="aba-conteudo-titulo-principal">Meta 1</h3>
+			<h3 class="aba-conteudo-titulo-principal">Aumentar o tempo de estudo</h3>
+			<h4 class="aba-conteudo-titulo-secundario">Tempo para completar os objetivo</h4>
+			<div class="contador"></div>
+			</div>
+			<div class="aba-conteudo">
+			<h3 class="aba-conteudo-titulo-principal">Melhorar o passe, manchete e ataque</h3>
+			<h4 class="aba-conteudo-titulo-secundario">Tempo para completar os objetivo</h4>
+			<div class="contador"></div>
+			</div>
+			<div class="aba-conteudo">
+			<h3 class="aba-conteudo-titulo-principal">Se preparar para o exame fisico</h3>
 			<h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
 			<div class="contador"></div>
 			</div>
 			<div class="aba-conteudo">
-			<h3 class="aba-conteudo-titulo-principal">Meta 2</h3>
-			<h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-			<div class="contador"></div>
-			</div>
-			<div class="aba-conteudo">
-			<h3 class="aba-conteudo-titulo-principal">Meta 3</h3>
-			<h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
-			<div class="contador"></div>
-			</div>
-			<div class="aba-conteudo">
-			<h3 class="aba-conteudo-titulo-principal">Meta 4</h3>
+			<h3 class="aba-conteudo-titulo-principal">Tentar não matar ninguem</h3>
 			<h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
 			<div class="contador"></div>
 			</div>
