--- a/index.html
+++ b/index.html
@@ -23,23 +23,40 @@
 			<div class="aba-conteudo ativo">
 	            <h3 class="aba-conteudo-titulo-principal">Aumentar o tempo de estudo</h3>
 			    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar os objetivo</h4>
-			    <div class="contador"></div>
+			    <div class="contador">
+					<div class="contador-digito">
+						<p class="contador-digito-numero">8</p>
+						<p class="contador-digito-texto">dias</p>
+					</div>
+				</div>
 			</div>
+			</div>			
 			<div class="aba-conteudo">
 			    <h3 class="aba-conteudo-titulo-principal">Melhorar o passe, manchete e ataque</h3>
 			    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar os objetivo</h4>
 			<div class="contador"></div>
+			</div>
+			<div class="contador-digito">
+				<p class="contador-digito-numero">8</p>
+				<p class="contador-digito-texto">horas</p>
 			</div>
 		    <div class="aba-conteudo">
 			    <h3 class="aba-conteudo-titulo-principal">Se preparar para o exame fisico</h3>
 			    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
 			<div class="contador"></div>
 			</div>
+			<div class="contador-digito">
+				<p class="contador-digito-numero">8</p>
+				<p class="contador-digito-texto">minutos</p>
+			</div>
 			<div class="aba-conteudo">
 			    <h3 class="aba-conteudo-titulo-principal">Tentar não matar ninguem</h3>
 			    <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
 			<div class="contador"></div>
 			</div>
+			<div class="contador-digito">
+				<p class="contador-digito-numero">8</p>
+				<p class="contador-digito-texto">segundos</p>
 			</div>
 		</div>
 
